--- a/pom.xml
+++ b/pom.xml
@@ -130,13 +130,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>5.1.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.11</version>
@@ -146,8 +139,6 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main</sourceDirectory>
-        <testSourceDirectory>src/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -163,9 +154,6 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>**/LoginServiceJUnitTest.class</exclude>
-                    </excludes>
                     <systemPropertyVariables>
                         <coverage-output>html</coverage-output>
                         <coverage-maxCallPoints>20</coverage-maxCallPoints>
@@ -177,10 +165,19 @@
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>1.1.0</version>
                     </dependency>
-
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.1.0</version>
+                    </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.1.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
                         <version>5.1.0</version>
                     </dependency>
                 </dependencies>
